--- a/app/src/main/res/layout/list_item_articles.xml
+++ b/app/src/main/res/layout/list_item_articles.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:background="@color/conduit_tag"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/open_sans_bold"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
@@ -26,7 +27,7 @@
         style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="@font/open_sans_light"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/authorTextView"
         app:layout_constraintTop_toBottomOf="@+id/authorTextView"
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
+        android:fontFamily="@font/open_sans_semibold"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -61,6 +63,7 @@
         android:layout_width="350dp"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/open_sans"
         android:maxLines="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
