--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,6 +8,10 @@
             android:id="@+id/nav_feed"
             android:icon="@drawable/round_list_black_24dp"
             android:title="Feed" />
+        <item
+            android:id="@+id/nav_auth"
+            android:icon="@drawable/ic_menu_auth"
+            android:title="Authentication" />
 
     </group>
 </menu>
