--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,5 +10,10 @@
         android:name="com.example.condiut.ui.feed.GlobalFeedFragment"
         android:label="Feed"
         tools:layout="@layout/fragment_feed" />
+    <fragment
+        android:id="@+id/nav_auth"
+        android:name="com.example.condiut.ui.auth.AuthFragment"
+        android:label="Authentication"
+        tools:layout="@layout/auth_fragment" />
 
 </navigation>
