--- a/app/src/main/res/navigation/mobile_navigation_guest.xml
+++ b/app/src/main/res/navigation/mobile_navigation_guest.xml
@@ -13,7 +13,7 @@
     <fragment
         android:id="@+id/nav_auth"
         android:name="com.example.condiut.ui.auth.AuthFragment"
-        android:label="Authentication"
+        android:label="Login/SignUp"
         tools:layout="@layout/auth_fragment" />
 
 </navigation>
