--- a/app/src/main/res/navigation/mobile_navigation_guest.xml
+++ b/app/src/main/res/navigation/mobile_navigation_guest.xml
@@ -8,7 +8,12 @@
     <fragment
         android:id="@+id/nav_feed"
         android:name="com.example.condiut.ui.feed.GlobalFeedFragment"
-        android:label="Feed"
+        android:label="Global Feed"
+        tools:layout="@layout/fragment_feed" />
+    <fragment
+        android:id="@+id/nav_my_feed"
+        android:name="com.example.condiut.ui.feed.MyFeedFragment"
+        android:label="My Feed"
         tools:layout="@layout/fragment_feed" />
     <fragment
         android:id="@+id/nav_auth"
