--- a/app/src/main/res/menu/menu_main_user.xml
+++ b/app/src/main/res/menu/menu_main_user.xml
@@ -12,6 +12,10 @@
             android:id="@+id/nav_my_feed"
             android:icon="@drawable/baseline_list_alt_black_24dp"
             android:title="My Feed" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/outline_settings_black_24dp"
+            android:title="Settings" />
 
 
     </group>
