--- a/app/src/main/res/navigation/mobile_navigation_guest.xml
+++ b/app/src/main/res/navigation/mobile_navigation_guest.xml
@@ -16,6 +16,11 @@
         android:label="My Feed"
         tools:layout="@layout/fragment_feed" />
     <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.example.condiut.ui.settings.SettingsFragment"
+        android:label="Settings"
+        tools:layout="@layout/settings_fragment" />
+    <fragment
         android:id="@+id/nav_auth"
         android:name="com.example.condiut.ui.auth.AuthFragment"
         android:label="Login/SignUp"
