--- a/app/src/main/res/navigation/mobile_navigation_guest.xml
+++ b/app/src/main/res/navigation/mobile_navigation_guest.xml
@@ -9,12 +9,35 @@
         android:id="@+id/nav_feed"
         android:name="com.example.condiut.ui.feed.GlobalFeedFragment"
         android:label="Global Feed"
-        tools:layout="@layout/fragment_feed" />
+        tools:layout="@layout/fragment_feed">
+        <action
+            android:id="@+id/action_nav_Globalfeed_to_nav_article"
+            app:destination="@id/nav_article"
+            app:popUpTo="@id/nav_feed">
+            <argument
+                android:name="@string/arg_article_id"
+                app:argType="string"
+
+                />
+        </action>
+
+    </fragment>
     <fragment
         android:id="@+id/nav_my_feed"
         android:name="com.example.condiut.ui.feed.MyFeedFragment"
         android:label="My Feed"
-        tools:layout="@layout/fragment_feed" />
+        tools:layout="@layout/fragment_feed">
+        <action
+            android:id="@+id/action_nav_my_feed_to_nav_article"
+            app:destination="@id/nav_article"
+            app:popUpTo="@id/nav_my_feed">
+            <argument
+                android:name="@string/arg_article_id"
+                app:argType="string"
+
+                />
+        </action>
+    </fragment>
     <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.condiut.ui.settings.SettingsFragment"
@@ -25,5 +48,10 @@
         android:name="com.example.condiut.ui.auth.AuthFragment"
         android:label="Login/SignUp"
         tools:layout="@layout/auth_fragment" />
+    <fragment
+        android:id="@+id/nav_article"
+        android:name="com.example.condiut.ui.articles.ArticleFragment"
+        android:label="Article"
+        tools:layout="@layout/article_fragment" />
 
 </navigation>
