--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -9,4 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:id="@+id/addArticleFAB"
+        android:src="@drawable/baseline_add_white_24dp"
+        android:layout_margin="16dp"
+        android:layout_gravity="end|bottom"
+        android:layout_height="wrap_content"/>
+
 </FrameLayout>
