--- a/app/src/main/res/navigation/mobile_navigation_guest.xml
+++ b/app/src/main/res/navigation/mobile_navigation_guest.xml
@@ -53,5 +53,10 @@
         android:name="com.example.condiut.ui.articles.ArticleFragment"
         android:label="Article"
         tools:layout="@layout/article_fragment" />
+    <fragment
+        android:id="@+id/nav_create_article"
+        android:name="com.example.condiut.ui.articles.CreateArticleFragment"
+        android:label="Create Article"
+        tools:layout="@layout/article_create_fragment" />
 
 </navigation>
